# salsa20

./: .gitignore  .project-settings.yml  README.md  Salsa20.cabal
bench/: Benchmarks.hs
src/Crypto/Cipher/: Salsa20.hs
src/Crypto/Cipher/Salsa20/: LE.hs  LE1.hs
test/: ECrypt.hs  Tests.hs
tests/: Benchmarks.hs  UnitTests.hs
tmp/: Main.hs
