Name: Salsa20
Version: 0.0.0.0
License: BSD3
Maintainer: Stanislav Chernichkin <schernichkin@gmail.com>
Author: Stanislav Chernichkin
Category: Cryptography
Build-Type: Simple
homepage: https://github.com/schernichkin/salsa20
synopsis: Salsa20 chiper
Description: Salsa20 chiper implementation in Haskell
Stability: Experemental
Cabal-version: >= 1.8

Library
    Hs-Source-Dirs: src
    Exposed-Modules: Crypto.Cipher.Salsa20
    Build-Depends: base
    GHC-Options: -O2 -Wall

test-suite Tests
    hs-source-dirs: test
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -main-is Tests.main
    build-depends: Salsa20
                 , base
                 , QuickCheck
                 , HUnit
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , test-framework

Benchmark Benchmarks
    hs-source-dirs: bench
    main-is: Benchmarks.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -O2 -main-is Benchmarks.main
    build-depends: Salsa20
                 , base
                 , criterion