Name:           Salsa20
Version:        0.0.0.0
License:        BSD3
Author:         Stanislav Chernichkin
Maintainer:     Stanislav Chernichkin <schernichkin@gmail.com>
Category:       Cryptography
Homepage:       https://github.com/schernichkin/salsa20
Synopsis:       Salsa20 chiper
Description:    Salsa20 chiper implementation in Haskell
Build-Type:     Simple
Stability:      Experemental
Cabal-version:  >= 1.8

Library
    Build-Depends:    base
                    , bytestring
                    , binary
    Exposed-Modules:  Crypto.Cipher.Salsa20
                    , Crypto.Cipher.Salsa20.LE
    default-extensions: CPP
    Hs-Source-Dirs:   src
    GHC-Options:      -Wall -O2

test-suite Tests
    hs-source-dirs: test
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -O2 -main-is Tests.main
    build-depends: Salsa20
                 , base
                 , QuickCheck
                 , HUnit
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , test-framework
                 , bytestring
                 , binary
                 , base16-bytestring

Benchmark Benchmarks
    hs-source-dirs: bench
    main-is: Benchmarks.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -O2 -main-is Benchmarks.main
    build-depends: Salsa20
                 , base
                 , criterion
                 , bytestring
                 , random
                 , binary